# damia

./: CHANGELOG.md  LICENSE  README.md  damia.cabal
app/: Main.hs
src/: Damia.hs  Options.hs  SqEq.hs  StrAtom.hs
test/: Test.hs
