cabal-version: 2.2

name: damia
version: 0.2.1

library
    build-depends:
      base,
      optparse-applicative
    default-language: Haskell2010
    exposed-modules:
      SqEq,
      Options,
      Damia,
      StrAtom
    hs-source-dirs: src

executable damia
    build-depends:
      base,
      damia
    default-language: Haskell2010
    main-is: Main.hs
    hs-source-dirs: app

test-suite test
    build-depends:
      base,
      tasty,
      tasty-hunit,
      damia
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    main-is: Test.hs
    hs-source-dirs: test
